<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="folder_name">Folder</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="group_applications">Apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_application">Choose app</string>
    <string name="hotseat_all_apps_button_string">Apps</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_target_remove_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">Uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">Read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">Write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="first_run_cling_title">Welcome!</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_search_bar_hint"></string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; hold background to manage wallpaper, widgets and settings.</string>
    <string name="folder_cling_title">Here\'s a folder</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; hold an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="overview_panel_button_widgets_string">Widgets</string>
    <string name="overview_panel_button_system_settings_string">Settings</string>
    <string name="msg_insert_SD">Please insert the SD card,then try again!</string>
    <string name="notify_downloading">Downloading </string>
    <string name="notify_download_finish"> Download finish!</string>
    <string name="notify_download_fail"> Download fail!</string>
    <string name="internet_err">The network connection is not available, please check your network settings</string>
    <string name="downloading_toast">" Is downloang"</string>
    <string name="to_download_content">Not yet installed on your phone, click OK to download and install!</string>
    <string name="to_download_ok">OK</string>
    <string name="to_download_cancel">Cancel</string>
    <string name="app_name">Phenix</string>
    <string name="overview_panel_button_launcher_settings_string">Preference</string>
    <string name="select_launcher_style">Launcher style</string>
    <string name="intelligent_classification">Intelligent classification</string>
    <string name="desktop_slide">Desktop slide</string>
    <string name="confirm_change_launcher_style">Confirm change launcher style?</string>
    <string name="change_style_will_restar">Changed will restar launcher</string>
    <string name="workspace_effect">Workspace effect</string>
    <string name="applist_effect">Applist effect</string>
    <string name="title">Title</string>
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="overview_panel_button_beauty_center_string">Beauty center</string>
    <string name="unknow_error">Unknow error</string>
    <string name="category_no_network">No network</string>
    <string name="category_is_running">Classifying</string>
    <string name="category_fail">Classification is failed</string>
    <string name="category_download_fail">Download failed,pleaes cheak your TCard</string>
    <string name="category_running">Classifying</string>
    <string name="category_stop_running">Recovering last layout</string>
    <string name="hava_not_category">Have not category</string>
    <string name="last_category_time">"Last category time：<xliff:g id="TIME">%1$s</xliff:g>"</string>
    <string name="category_more_apps">MoreApps</string>
    <string name="is_first_in_drawer_launcher_style">Is_first_in_drawer_launcher_style</string>
    <string name="widget_time_title"> Timer</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="allApp_load_hint">Loading…</string>
    <string name="disclaimer_dialog_info">\u3000\u3000Welcome to Phenix launcher,  Which is provided completely for free. In order to better serve users， Phenix may gather information from  your music player，message, contact list and call records. 
    \n\u3000\u3000In addition, some functions require to network, which will incur fees. For details, please consult local operators. Do you agree the operation?
</string>
    <string name="no_remind_next_time">Agree and no longer prompt!</string>
    <string name="use_continue">Use Continue</string>
    <string name="warn">Warn</string>
    <string name="dialog_button_negative">Cancle</string>
    <string name="dialog_button_positive">Confirm</string>
    <string name="ok">OK</string>
    <string name="widget_download_content">Not yet installed on your phone, click OK to download and install!</string>
    <string name="loading_text">Complex in simple</string>
    <string name="loading_launcher_name">Phenix</string>
    <string name="loading_launcher_progress_text">launcher loading&#8230;</string>
    <string name="default_folder">Phenix Tools</string>
    <string name="category_folder800">Daily life</string>
    <string name="category_folder801">News</string>
    <string name="category_folder802">Communicate</string>
    <string name="category_folder803">Audio and video</string>
    <string name="category_folder804">Read</string>
    <string name="category_folder805">Tools</string>
    <string name="category_folder806">Beautify</string>
    <string name="category_folder807">Finance</string>
    <string name="category_folder808">Game</string>
    <string name="category_folder_system">System</string>
    <string name="category_folder_moreapp">More App</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Pick Wallpaper</string>
    <string name="app_icon_size">app icon size</string>
    <string name="overview_panel_text_hint_string">Drag the page to change the page location</string>
    <string name="launcher_update_activity_name">Launcher Update</string>
    <string name="native_adver_title">Recommended application</string>
    <string name="native_adver_place_id">20160106100141441</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Go to <xliff:g id="query" example="Play Store">%1$s</xliff:g></string>
    <string name="launcher_setting_default_launcher_item_title">Set As Default Desktop</string>
    <string name="default_launcher_guide_dialog_title">HOME Key Setting</string>
    <string name="default_launcher_guide_dialog_content">\u3000\u3000For you to have a better experience, set it to press Home to start the phenix desktop.\n\n\u3000\u3000PS：You can change  in your settings.</string>
    <string name="default_launcher_guide_dialog_ok">Set</string>
    <string name="default_launcher_guide_dialog_cancel">Cancel</string>
    <string name="default_launcher_tips_dialog_step1">step 1 first, chiose</string>
    <string name="default_launcher_tips_dialog_step2">step 2  second ,click always</string>
    <string name="app_menu_sort_app_name">Sort by app name</string>
    <string name="app_menu_sort_app_install_time">Sort by install time</string>
    <string name="app_menu_sort_app_use_frequency">Sort by frequency of use</string>
    <string name="app_menu_sort_dialog_title">Sort Icons</string>
    <string name="app_menu_sort_app_init">Sort by factory data</string>
    <string name="app_menu_appbar_tab_view_as">View as</string>
    <string name="app_menu_appbar_tab_edit">Edit</string>
    <string name="app_menu_appbar_tab_hide">Hide apps</string>
    <string name="app_menu_appbar_tab_search">Search</string>
    <string name="app_menu_appbar_tab_a_z">A-Z</string>
    <string name="uiupdate_privacy_statement_link_url"><a href="http://uifolder.coolauncher.com.cn/policy/PrivacyPolicy.html">Privacy statement</a> and <a href="http://uifolder.coolauncher.com.cn/policy/TermsOfService.html">terms of service</a></string>
    <string name="workspace_menu_vertical_list_item_title_widget">Widget</string>
    <string name="workspace_menu_vertical_list_item_title_wallpaper">Wallpaper</string>
    <string name="workspace_menu_vertical_list_item_title_theme">Theme</string>
    <string name="workspace_menu_vertical_list_item_title_edit_mode">Edit Mode</string>
    <string name="workspace_menu_vertical_list_item_title_launcher_settings">Launcher Settings</string>
    <string name="workspace_menu_vertical_list_item_title_system_settings">System Settings</string>
    <string name="pick_widget_activity_title">pick widget</string>
    <string name="pick_wallpaper_activity_title">pick wallpaper</string>
    <string name="effect_jerk">Jerk</string>
    <string name="effect_classic">Classic</string>
    <string name="effect_laminated">Laminated</string>
    <string name="effect_inner_cube">Inner cube</string>
    <string name="effect_cube">Cube</string>
    <string name="effect_sector">Sector</string>
    <string name="effect_rollover">Rollover</string>
    <string name="effect_windmill">Windmill</string>
    <string name="effect_wheel">Wheel</string>
    <string name="effect_fold_unfold">Fold/unfold</string>
    <string name="effect_snake">Snake</string>
    <string name="effect_chord">Chord</string>
    <string name="effect_random">Random</string>
    <string name="edit_theme_default_theme">Default theme</string>
    <string name="overview_panel_button_wallpaper_string">Wallpaper</string>
    <string name="launcher_settings_workspace_scroll_type_title">Workspace Scroll Type</string>
    <string name="launcher_settings_applist_scroll_type_title">Applist Scroll Type</string>
    <string name="launcher_settings_widget_scroll_type_title">Widget Scroll Type</string>
</resources>