<?xml version="1.0" encoding="utf-8"?>
<!-- cheyingkun add whole file	//免责声明布局 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="440dp"
    android:background="#FFFFFF" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="#4AB6D9"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/warn"
            style="@style/DisclaimerDialogWarnStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/warn"
            android:textColor="#EEEEEE"
            android:textSize="18sp" />

        <Button
            android:id="@+id/exit"
            style="@style/DisclaimerDialogExitStyle"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/disclaimer_dialog_exit" />
    </RelativeLayout>

    <!-- 内容 -->

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="17dp" >

        <TextView
            android:id="@+id/deleteInfo"
            style="@style/DisclaimerDialogDelInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_dialog_info"
            android:textColor="#222222"
            android:textSize="18sp" />
    </ScrollView>

    <!-- 选择框 -->

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/sv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:text="@string/no_remind_next_time"
        android:textColor="#88222222"
        android:textSize="16sp" />

    <!-- 按钮 -->

    <Button
        android:id="@+id/dialog_button_ok"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/disclaimer_dialog_confirm"
        android:text="@string/use_continue"
        android:textColor="#EEEEEE"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_button_negative"
        style="@style/DisclaimerDialogButtonNegativeStyle"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sv"
        android:layout_marginTop="60dp"
        android:background="@drawable/disclaimer_dialog_cancle"
        android:text="@string/dialog_button_negative"
        android:textColor="#EEEEEE"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_button_positive"
        style="@style/DisclaimerDialogButtonPositiveStyle"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sv"
        android:layout_marginTop="60dp"
        android:background="@drawable/disclaimer_dialog_confirm"
        android:text="@string/dialog_button_positive"
        android:textColor="#EEEEEE"
        android:textSize="16sp" />

</RelativeLayout>