<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/app_menu_sort_dialog_width"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvDiaglogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_menu_sort_dialog_title_background"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/app_menu_sort_dialog_title"
        android:textColor="@color/app_menu_sort_dialog_title_textcolor"
        android:textSize="@dimen/app_menu_sort_dialog_title_textSize" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_menu_sort_dialog_radiogroup_background"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/RadioFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="5dp"
            android:saveEnabled="false"
            android:text="@string/app_menu_sort_app_init"
            android:textColor="@color/app_menu_sort_dialog_radiobutton_textcolor"
            android:textSize="@dimen/app_menu_sort_dialog_radiobutton_textSize"
            android:visibility="gone" />

        <View
            android:id="@+id/lineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#133C44"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RadioInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="5dp"
            android:saveEnabled="false"
            android:text="@string/app_menu_sort_app_install_time"
            android:textColor="@color/app_menu_sort_dialog_radiobutton_textcolor"
            android:textSize="@dimen/app_menu_sort_dialog_radiobutton_textSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#133C44" />

        <RadioButton
            android:id="@+id/RadioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="5dp"
            android:saveEnabled="false"
            android:text="@string/app_menu_sort_app_name"
            android:textColor="@color/app_menu_sort_dialog_radiobutton_textcolor"
            android:textSize="@dimen/app_menu_sort_dialog_radiobutton_textSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#133C44" />

        <RadioButton
            android:id="@+id/RadioFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="5dp"
            android:saveEnabled="false"
            android:text="@string/app_menu_sort_app_use_frequency"
            android:textColor="@color/app_menu_sort_dialog_radiobutton_textcolor"
            android:textSize="@dimen/app_menu_sort_dialog_radiobutton_textSize" />
    </RadioGroup>

    <Button
        android:id="@+id/btnDialogCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_menu_sortapp_cancel_button"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/dialog_button_negative"
        android:textColor="@color/app_menu_sort_dialog_button_textcolor"
        android:textSize="@dimen/app_menu_sort_dialog_cancelbutton_textSize" />

</LinearLayout>